# prime_factor

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Solver.h  main.cpp  prim_factor.cpp
